[package]
name = "agent-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.27", features = ["fs", "sched", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "agent-manager"
path = "src/main.rs"